# FreeImage

./: FreeImage.2013.vcxproj  README.md
Source/: CMakeLists.txt
Source/FreeImage/: PluginPNG.cpp
Source/FreeImageLib/: FreeImageLib.2013.vcxproj
Source/LibJPEG/: CMakeLists.txt
Source/LibJXR/: CMakeLists.txt
Source/LibOpenJPEG/: CMakeLists.txt
Source/LibPNG/: CMakeLists.txt  pngstruct.h
Source/LibRawLite/: CMakeLists.txt
Source/LibTIFF4/: CMakeLists.txt  tif_config.h  tif_pixarlog.c  tif_zip.c
Source/LibWebP/: CMakeLists.txt
Source/OpenEXR/: CMakeLists.txt
Source/OpenEXR/IlmImf/: ImfDwaCompressor.cpp  ImfOptimizedPixelReading.h  ImfSystemSpecific.h
Source/ZLib/: ZLib.2013.vcxproj
